Fixed workbook text centering and padding-top issue on small viewports

--- a/app/scss/utilities.scss
+++ b/app/scss/utilities.scss
@@ -289,6 +289,10 @@
 // .pt-1 { padding-top: 1em; }
 // .pt-0 { padding-top: 0em; }
 
+@media (max-width: $vw-200) {
+  .pt-3-vw200 { padding-top: 3em; }
+}
+
 
 
 
